#--------------------------------------------------------------------------
# File and Version Information:
#  $Id:$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-17
2016-11-23 Jacob Scott and Christopher O'Grady
- add h5constants.py to persist hierarchy of dictionaries in a calib-dir hdf5 file

Tag: V00-03-16
2016-11-22 Mikhail S. Dubrovin
- GeometryAccess - add default constructor and load_pars_from_str method
- in DCVersion.print_obj - switch to formatted print for str/text constants

Tag: V00-03-15
2016-11-21 Mikhail S. Dubrovin
- DCMethods - add methods test_*_file() 

Tag: V00-03-14
2016-11-18 Mikhail S. Dubrovin
- DCMethods - add *_file(...,fname,...) for all procedures
	
Tag: V00-03-13
2016-11-18 Mikhail S. Dubrovin
- dcs - add/get DCS geometry constants from/to the text file
- DCMethods - add evt_to_tsec, test_add_text
- DCVersion - fix issue with returning data as str: d.tostring()
- GlobalUtils - add load_textfile, GEOMETRY 

Tag: V00-03-12
2016-11-17 Mikhail S. Dubrovin
- CalibParsStore, GenericCalibPars - now support constants from DCS
- DCMethods - update methods, add methods for direct access to hdf5 file
- DCBase - tune doc

Tag: V00-03-11
2016-11-14 Mikhail S. Dubrovin
- DCDetectorId.id_epix - add protection and extend backward compatability for old data with missing carrierId methods
	
Tag: V00-03-10
2016-11-08 Mikhail S. Dubrovin
- Tuning of DCMethods, update of examples.
  - DCDetectorId.id_epix - returns eics Id made of 7 numbers
  - add DCMethods.print_file - print directly from file
  - dcs - add print option directly from file
  - DCMethods.add_constants - add experiment name and run number in the comment for range 
	and add them to the dict of parameters
  - update examples
	
Tag: V00-03-09
2016-10-19 Mikhail S. Dubrovin