@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-18
+2016-12-01 Mikhail S. Dubrovin
+- CalibParsStore.py - fix issue with non-defined attibute self.tsec
+	
 Tag: V00-03-17
 2016-11-23 Jacob Scott and Christopher O'Grady
 - add h5constants.py to persist hierarchy of dictionaries in a calib-dir hdf5 file
